js/js.translator/testData/incremental/invalidation/jsName/lib3/lib.1.kt
class TestClass : FooBarImpl() {
    override fun default(): String = "TestClass"
}